
2017-07-14  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* parser.y: only allow RETURNING/GIVING in EXIT PROGRAM/GOBACK
	  if RETURN-CODE register is not disabled; always return 0 on
	  STOP RUN if no RETURN-CODE register is available
	* reserved.c, tree.h: new functions cb_register_list_get_first and
	  cb_register_list_get_next for iterating through all active registers
	* typeck.c: modularize register creation

2017-07-13  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* config.def: added support options cb_move_fig_constant_to_numeric
	  "move-figurative-constant-to-numeric" and cb_move_fig_quote_to_numeric
	  "move-figurative-quote-to-numeric"
	* typeck.c: re-allow move of figurative constants to numeric/numeric
	  edited fields, cater for new compiler support flags
	  cb_move_fig_constant_to_numeric and cb_move_fig_quote_to_numeric;
	  removed the explicit internal change in this case to ALL ZERO
	* typeck.c, cobc.h, cobc.c: renamed cb_list_system
	  to cb_list_system_routines
	* reserved.c, cobc.h, cobc.c: renamed cb_list_mnemonics
	  to cb_list_system_names
	* reserved.c: added switch alias-names UPSI-0 to UPSI-8
	* cobc.c (cobc_enum_explain), codegen.c (output_param), tree.h:
	  added missing parts for CB_TAG_DECIMAL_LITERAL to fix
	  cast check errors

2017-07-12  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* typeck.c, parser.y, tree.c, codegen.c: checked the now optional fields
	  cb_return_code, cb_call_params, cb_sort_return before accessing them
	* flag.def: removed -fsyntax-extension "cb_syntax_extension" because
	  there's no actual use any more as non-standard switches can now be
	  activated by compiler configuration and/or command line option
	  -fsystem-name=SW1
	* reserved.c: added ACUCOBOL synonym ABSOLUTE-VALUE for function ABS

2017-07-11  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* reserved.c: added functions for (de)activating registers, system names,