@@ -1,4 +1,8 @@
 
+2017-07-17  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
+
+	* config.c: better handling of empty/comment only lines
+
 2017-07-14  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* parser.y: only allow RETURNING/GIVING in EXIT PROGRAM/GOBACK
